Fix top hour not showing up, add dummy control

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,9 @@
 
 [data-type="timeline"] .view-content {
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .absolute-stretch-x {
